Alignment issues 1.1

--- a/public/css/page1.css
+++ b/public/css/page1.css
@@ -1,14 +1,9 @@
-body, html {
-    height: 100%;
-    
-}
-.bg {
-    background-image: url("../img/pic1.png");
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: initial;
-    overflow: scroll;
+body { 
+    background: url("../img/pic1.png") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 .paragraph{
     font-weight: 400;
